--- a/event-management/backend/.env
+++ b/event-management/backend/.env
@@ -1,3 +1,3 @@
 PORT=5000
-MONGO_URI=mongodb://localhost:27017/eventDB
+MONGO_URI=mongodb+srv://pratham9:Pratham@mycluster.kukrd9w.mongodb.net/eventDB
 JWT_SECRET=mysecretkey123
